--- a/cover.css
+++ b/cover.css
@@ -42,6 +42,7 @@ body {
 }
 
 .nav-masthead .navbar {
+  text-decoration:none; 
   padding: .25rem 0;
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
