--- a/galeriacss.css
+++ b/galeriacss.css
@@ -14,6 +14,7 @@ body {
   background-color: #333;
 }
 .nav-masthead .navbar {
+  text-decoration:none; 
   padding: .25rem 0;
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
